api-app-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:
      labels:
        app: api-demo
    spec:
      containers:
        - name: api-demo
          image: hashicorp/http-echo
          args:
            - "-text=Hello from my-api"
          ports:
            - containerPort: 5678
