apps-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apps-demo
  template:
    metadata:
      labels:
        app: apps-demo
    spec:
      containers:
        - name: apps-demo
          image: nginx
          ports:
            - containerPort: 80
