deamonset-demo.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: deamonset-demo
  labels:
    app: fluentd
spec:
  selector:
    matchLabels:
      name: fluentd
    
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.16-1
          resources:
            limits:
              memory: 200Mi
              cpu: 1000m
            requests:
              memory: 200Mi
              cpu: 1000m
          volumeMounts:
            - name: varlog
              mountPath: /var/log
              
      
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
