storage-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: storage-demo
spec:
  containers:
    - name: storage-demo
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: storage-demo-volume
  volumes:
    - name: storage-demo-volume
      persistentVolumeClaim:
        claimName: Database-pvc
