api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service-demo
spec:
  selector:
    app: api-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
