service-demo.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: apps-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
